load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_img//img:image.bzl", "image_from_binary", "image_manifest")
load("@rules_img//img:multi_deploy.bzl", "multi_deploy")
load("@rules_img//img:oras.bzl", "oras_file_layer")
load("@rules_img//img:push.bzl", "image_push")
load("@supply_chain_tools//sbom:cyclonedx.bzl", "cyclonedx")
load("@supply_chain_tools//sbom:sbom.bzl", "sbom")

platform(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

image_from_binary(
    name = "image",
    base = "@alpine",
    binary = "//app",
    platforms = [
        ":linux_amd64",
        ":linux_arm64",
    ],
)

sbom(
    name = "image_sbom",
    target = ":image",
)

cyclonedx(
    name = "image_sbom_cdx",
    sbom = ":image_sbom",
)

oras_file_layer(
    name = "sbom_layer",
    src = ":image_sbom_cdx",
    media_type = "application/vnd.cyclonedx+json",
    title = "sbom",
)

image_manifest(
    name = "sbom_manifest",
    artifact_type = "application/vnd.cyclonedx+json",
    config_media_type = "application/vnd.oci.empty.v1+json",
    layers = [":sbom_layer"],
    subject = ":image",
)

image_push(
    name = "push_image",
    image = ":image",
    referrers = [":sbom_manifest"],
    # Set the destination registry per-image here, or globally in .bazelrc via
    # --@rules_img//img/settings:destination_registry=docker.acme.tld
    # registry = "docker.acme.tld",
    repository = "malt3/supply-chain-example",
    tag = "latest",
    visibility = ["//visibility:public"],
)

# Standardized deploy entrypoints. The integration test runner runs `//:push`
# against an ephemeral local registry (destination_registry injected via
# .bazelrc.generated). `deploy` performs every operation; `push`/`load` filter.
multi_deploy(
    name = "deploy",
    operations = [":push_image"],
)

multi_deploy(
    name = "push",
    deploy_operations = ["push"],
    operations = [":push_image"],
)

multi_deploy(
    name = "load",
    deploy_operations = ["load"],
    operations = [":push_image"],
)

# Note:
#
# You can check the SBOM using common tools:
# > trivy image --sbom-sources oci ghcr.io/malt3/supply-chain-example:latest
#
# You can also use standard tooling to inspect referrers:
# > regctl artifact tree ghcr.io/malt3/supply-chain-example:latest
# > oras discover ghcr.io/malt3/supply-chain-example:latest
# > regctl artifact get --subject ghcr.io/malt3/supply-chain-example:latest --filter-artifact-type application/vnd.cyclonedx+json | jq

build_test(
    name = "test",
    targets = [
        "//:image_sbom",
        "//:image_sbom_cdx",
        "//:image",
        "//:deploy",
        "//:push",
        "//:load",
        "//:push_image",
        "//:sbom_layer",
        "//:sbom_manifest",
    ],
)
