module(name = "sbom_e2e")

# Signer plugin bazel_deps live OUTSIDE the BAZEL_DEP markers so they survive
# the substitution the integration test runner performs (it replaces everything
# between the markers with a single bazel_dep on the released rules_img). In
# released/scratch mode they resolve from the offline BCR
# (//img/private/release:bcr); in local dev mode the local_path_overrides below
# (inside the markers) build them from source instead. Versions must match
# module(version = ...) in each plugin's MODULE.bazel.
bazel_dep(name = "rules_img_signer_cosign", version = "0.0.1")
bazel_dep(name = "rules_img_signer_notation", version = "0.0.1")

# BEGIN BAZEL_DEP
bazel_dep(name = "rules_img")
local_path_override(
    module_name = "rules_img",
    path = "../..",
)

bazel_dep(name = "rules_img_tool")
local_path_override(
    module_name = "rules_img_tool",
    path = "../../img_tool",
)

local_path_override(
    module_name = "rules_img_signer_cosign",
    path = "../../modules/rules_img_signer_cosign",
)

local_path_override(
    module_name = "rules_img_signer_notation",
    path = "../../modules/rules_img_signer_notation",
)

register_toolchains("@rules_img_tool//toolchain:all")
# END BAZEL_DEP

# Required when building rules_img_signer_cosign from source: gazelle_override is
# root-module-only and cannot be declared in the cosign module itself.
bazel_dep(name = "gazelle", version = "0.51.3")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.gazelle_override(
    directives = ["gazelle:go_generate_proto false"],
    path = "github.com/sigstore/rekor-tiles/v2",
)
go_deps.gazelle_override(
    directives = ["gazelle:go_generate_proto false"],
    path = "github.com/google/certificate-transparency-go",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "package_metadata", version = "0.0.13")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "supply_chain_tools", version = "0.0.1")

# FIXME: drop archive_override after https://github.com/bazel-contrib/supply-chain/pull/158 is merged and released
archive_override(
    module_name = "supply_chain_tools",
    integrity = "sha256-n934H5t5lmrAN/Dhq6jf59B02FpEJIYyC4YmVEf9obU=",
    strip_prefix = "supply-chain-19778b53bab50d308dea6dd46ee9f6cc7b5a4da2/tools",
    urls = ["https://github.com/bazel-contrib/supply-chain/archive/19778b53bab50d308dea6dd46ee9f6cc7b5a4da2.tar.gz"],
)

# FIXME: drop archive_override after https://github.com/bazel-contrib/supply-chain/pull/158 is merged and released
archive_override(
    module_name = "supply-chain-go",
    integrity = "sha256-n934H5t5lmrAN/Dhq6jf59B02FpEJIYyC4YmVEf9obU=",
    strip_prefix = "supply-chain-19778b53bab50d308dea6dd46ee9f6cc7b5a4da2/lib/supplychain-go",
    urls = ["https://github.com/bazel-contrib/supply-chain/archive/19778b53bab50d308dea6dd46ee9f6cc7b5a4da2.tar.gz"],
)

pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "alpine",
    digest = "sha256:51183f2cfa6320055da30872f211093f9ff1d3cf06f39a0bdb212314c5dc7375",
    registry = "mirror.gcr.io",
    repository = "library/alpine",
    tag = "3.23",
)
