"""Defines a set of prebuilt deploy tools for the target platform"""

load("//img:deploy_tool.bzl", "img_deploy_tool")

img_deploy_tool(
    name = "deploy_tool",
    img_deploy_exe = "@img_toolchain//target",
    launcher_template = "@hermetic_launcher//launcher/template:prebuilt",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//img/private/release:__subpackages__"],
)
