load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "annotations_util",
    srcs = ["annotations_util.bzl"],
    visibility = ["//img:__subpackages__"],
)

bzl_library(
    name = "import",
    srcs = ["import.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        ":manifest_media_type",
        "//img:providers",
        "//img/private/common:transitions",
    ],
)

bzl_library(
    name = "index",
    srcs = ["index.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        ":stamp",
        "//img:providers",
        "//img/private/common:build",
        "//img/private/common:transitions",
        "//img/private/common:write_index_json",
        "//img/private/providers:oci_layout_settings_info",
        "//img/private/providers:stamp_setting_info",
        "@bazel_skylib//rules:common_settings",
    ],
)

bzl_library(
    name = "layer",
    srcs = ["layer.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        "//img:providers",
        "//img/private/common:build",
        "//img/private/providers:layer_info",
        "@bazel_skylib//rules:common_settings",
    ],
)

bzl_library(
    name = "layer_path_hints",
    srcs = ["layer_path_hints.bzl"],
    visibility = ["//img:__subpackages__"],
)

bzl_library(
    name = "push",
    srcs = ["push.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        ":layer_path_hints",
        ":root_symlinks",
        ":stamp",
        "//img:providers",
        "//img/private/common:build",
        "//img/private/common:default_deploy_tool",
        "//img/private/common:transitions",
        "//img/private/providers:deploy_info",
        "//img/private/providers:deploy_tool_info",
        "//img/private/providers:index_info",
        "//img/private/providers:manifest_info",
        "//img/private/providers:pull_info",
        "//img/private/providers:push_settings_info",
        "//img/private/providers:stamp_setting_info",
        "@bazel_skylib//rules:common_settings",
        "@hermetic_launcher//launcher:lib_bzl",
    ],
)

bzl_library(
    name = "load",
    srcs = ["load.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        ":layer_path_hints",
        ":root_symlinks",
        ":stamp",
        "//img/private/common:build",
        "//img/private/common:default_deploy_tool",
        "//img/private/common:transitions",
        "//img/private/providers:deploy_info",
        "//img/private/providers:deploy_tool_info",
        "//img/private/providers:index_info",
        "//img/private/providers:load_settings_info",
        "//img/private/providers:manifest_info",
        "//img/private/providers:oci_layout_settings_info",
        "//img/private/providers:pull_info",
        "//img/private/providers:stamp_setting_info",
        "@bazel_skylib//rules:common_settings",
        "@hermetic_launcher//launcher:lib_bzl",
    ],
)

bzl_library(
    name = "manifest",
    srcs = ["manifest.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        ":annotations_util",
        ":stamp",
        "//img/private/common:build",
        "//img/private/common:layer_helper",
        "//img/private/common:transitions",
        "//img/private/config:defs",
        "//img/private/providers:index_info",
        "//img/private/providers:layer_info",
        "//img/private/providers:manifest_info",
        "//img/private/providers:oci_layout_settings_info",
        "//img/private/providers:pull_info",
        "//img/private/providers:stamp_setting_info",
        "@bazel_skylib//rules:common_settings",
    ],
)

bzl_library(
    name = "image_toolchain",
    srcs = ["image_toolchain.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        "//img/private/common:transitions",
        "//img/private/providers:image_toolchain_info",
    ],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [":image_toolchain"],
)

bzl_library(
    name = "layer_from_file",
    srcs = ["layer_from_file.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        "//img/private/common:build",
        "//img/private/common:layer_helper",
        "//img/private/providers:layer_info",
    ],
)

bzl_library(
    name = "layer_from_tar",
    srcs = ["layer_from_tar.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        "//img/private/common:build",
        "//img/private/common:layer_helper",
        "//img/private/providers:layer_info",
        "@bazel_skylib//rules:common_settings",
    ],
)

bzl_library(
    name = "oras_file_layer",
    srcs = ["oras_file_layer.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        ":layer_from_file",
        "@bazel_features//:features",
    ],
)

bzl_library(
    name = "oras_layer",
    srcs = ["oras_layer.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        ":layer",
        "@bazel_features//:features",
    ],
)

bzl_library(
    name = "download_blobs",
    srcs = ["download_blobs.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        "//img/private/common:build",
        "//img/private/common:transitions",
        "@bazel_skylib//rules:common_settings",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//img/private/release:__subpackages__"],
)

bzl_library(
    name = "stamp",
    srcs = ["stamp.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        "//img/private/common:build",
        "//img/private/providers:stamp_setting_info",
        "@bazel_skylib//rules:common_settings",
    ],
)

bzl_library(
    name = "multi_deploy",
    srcs = ["multi_deploy.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        ":root_symlinks",
        "//img/private/common:build",
        "//img/private/common:default_deploy_tool",
        "//img/private/common:transitions",
        "//img/private/providers:deploy_info",
        "//img/private/providers:deploy_tool_info",
        "//img/private/providers:load_settings_info",
        "//img/private/providers:push_settings_info",
        "//img/private/providers:stamp_setting_info",
        "@bazel_skylib//rules:common_settings",
        "@hermetic_launcher//launcher:lib_bzl",
    ],
)

bzl_library(
    name = "file_metadata",
    srcs = ["file_metadata.bzl"],
    visibility = ["//img:__subpackages__"],
)

bzl_library(
    name = "manifest_media_type",
    srcs = ["manifest_media_type.bzl"],
    visibility = ["//img:__subpackages__"],
)

bzl_library(
    name = "root_symlinks",
    srcs = ["root_symlinks.bzl"],
    visibility = ["//img:__subpackages__"],
)

bzl_library(
    name = "deploy_tool",
    srcs = ["deploy_tool.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = ["//img/private/providers:deploy_tool_info"],
)

bzl_library(
    name = "file_for_host",
    srcs = ["file_for_host.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = ["//img/private/common:transitions"],
)
