load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//img/private:download_blobs_test.bzl", "download_blobs_test_suite")

download_blobs_test_suite(name = "download_blobs_test")

bzl_library(
    name = "import",
    srcs = ["import.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        ":manifest_media_type",
        "//img:providers",
        "//img/private/common:build",
        "//img/private/common:layer_helper",
        "//img/private/common:sparse_oci_layout",
        "//img/private/common:transitions",
        "@bazel_skylib//rules:common_settings",
    ],
)

bzl_library(
    name = "index",
    srcs = ["index.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        ":push_metadata",
        ":stamp",
        "//img:providers",
        "//img/private/common:build",
        "//img/private/common:transitions",
        "//img/private/common:write_index_json",
        "//img/private/providers:load_config_info",
        "//img/private/providers:oci_layout_settings_info",
        "//img/private/providers:push_at_build_time_settings_info",
        "//img/private/providers:push_config_info",
        "//img/private/providers:stamp_setting_info",
        "@bazel_skylib//rules:common_settings",
    ],
)

bzl_library(
    name = "layer",
    srcs = ["layer.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        "//img:providers",
        "//img/private/common:build",
        "//img/private/common:layer_attrs",
        "//img/private/common:tar_layer",
        "//img/private/providers:layers_info",
    ],
)

bzl_library(
    name = "layer_from_binary",
    srcs = ["layer_from_binary.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        "//img/private/common:build",
        "//img/private/common:layer_attrs",
        "//img/private/common:tar_layer",
        "//img/private/providers:layer_config_info",
        "//img/private/providers:layers_info",
        "@rules_runfiles_group//runfiles_group:lib",
        "@rules_runfiles_group//runfiles_group:providers",
    ],
)

bzl_library(
    name = "image_from_binary",
    srcs = ["image_from_binary.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        ":index",
        ":layer_from_binary",
        ":manifest",
        "@bazel_features//:features",
    ],
)

bzl_library(
    name = "push",
    srcs = ["push.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        ":push_metadata",
        ":root_symlinks",
        ":sign_settings",
        ":stamp",
        "//img:providers",
        "//img/private/common:build",
        "//img/private/common:default_deploy_tool",
        "//img/private/common:deploy_attrs",
        "//img/private/common:deploy_helpers",
        "//img/private/common:transitions",
        "//img/private/providers:deploy_info",
        "//img/private/providers:deploy_tool_info",
        "//img/private/providers:index_info",
        "//img/private/providers:manifest_info",
        "//img/private/providers:pull_info",
        "//img/private/providers:push_at_build_time_settings_info",
        "//img/private/providers:push_settings_info",
        "@bazel_skylib//rules:common_settings",
        "@hermetic_launcher//launcher:lib_bzl",
    ],
)

bzl_library(
    name = "load",
    srcs = ["load.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        ":push_metadata",
        ":root_symlinks",
        ":stamp",
        "//img/private/common:build",
        "//img/private/common:default_deploy_tool",
        "//img/private/common:deploy_attrs",
        "//img/private/common:deploy_helpers",
        "//img/private/common:transitions",
        "//img/private/providers:deploy_info",
        "//img/private/providers:deploy_tool_info",
        "//img/private/providers:index_info",
        "//img/private/providers:load_settings_info",
        "//img/private/providers:manifest_info",
        "//img/private/providers:oci_layout_settings_info",
        "//img/private/providers:pull_info",
        "@bazel_skylib//rules:common_settings",
        "@hermetic_launcher//launcher:lib_bzl",
    ],
)

bzl_library(
    name = "image_structure_test",
    srcs = ["image_structure_test.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        "//img/private/common:build",
        "//img/private/providers:deploy_tool_info",
        "//img/private/providers:image_structure_test_info",
        "//img/private/providers:index_info",
        "//img/private/providers:manifest_info",
        "@bazel_skylib//rules:common_settings",
        "@hermetic_launcher//launcher:lib_bzl",
    ],
)

bzl_library(
    name = "manifest",
    srcs = ["manifest.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        ":annotations_util",
        ":push_metadata",
        ":stamp",
        "//img/private/common:build",
        "//img/private/common:inherit",
        "//img/private/common:layer_helper",
        "//img/private/common:transitions",
        "//img/private/config:defs",
        "//img/private/providers:index_info",
        "//img/private/providers:layer_config_info",
        "//img/private/providers:layers_info",
        "//img/private/providers:load_config_info",
        "//img/private/providers:manifest_info",
        "//img/private/providers:oci_layout_settings_info",
        "//img/private/providers:pull_info",
        "//img/private/providers:push_at_build_time_settings_info",
        "//img/private/providers:push_config_info",
        "//img/private/providers:single_layer_info",
        "//img/private/providers:stamp_setting_info",
        "@bazel_skylib//rules:common_settings",
    ],
)

bzl_library(
    name = "optimize",
    srcs = ["optimize.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        "//img/private/common:build",
        "//img/private/common:layer_helper",
        "//img/private/common:transitions",
        "//img/private/providers:index_info",
        "//img/private/providers:manifest_info",
        "//img/private/providers:oci_layout_settings_info",
        "//img/private/providers:single_layer_info",
        "@bazel_skylib//rules:common_settings",
    ],
)

bzl_library(
    name = "image_toolchain",
    srcs = ["image_toolchain.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        "//img/private/common:transitions",
        "//img/private/providers:image_toolchain_info",
    ],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [":image_toolchain"],
)

bzl_library(
    name = "layer_from_file",
    srcs = ["layer_from_file.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        "//img/private/common:build",
        "//img/private/common:layer_helper",
        "//img/private/providers:layers_info",
    ],
)

bzl_library(
    name = "layer_from_tar",
    srcs = ["layer_from_tar.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        "//img/private/common:build",
        "//img/private/common:layer_helper",
        "//img/private/providers:layers_info",
        "@bazel_skylib//rules:common_settings",
    ],
)

bzl_library(
    name = "oras_file_layer",
    srcs = ["oras_file_layer.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        ":layer_from_file",
        "@bazel_features//:features",
    ],
)

bzl_library(
    name = "oras_layer",
    srcs = ["oras_layer.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        ":layer",
        "@bazel_features//:features",
    ],
)

bzl_library(
    name = "download_blobs",
    srcs = ["download_blobs.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        "//img/private/common:build",
        "//img/private/common:transitions",
        "@bazel_skylib//rules:common_settings",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//img/private/release:__subpackages__"],
)

bzl_library(
    name = "stamp",
    srcs = ["stamp.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        "//img/private/common:build",
        "//img/private/providers:stamp_setting_info",
        "@bazel_skylib//rules:common_settings",
    ],
)

bzl_library(
    name = "multi_deploy",
    srcs = ["multi_deploy.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        ":root_symlinks",
        ":sign_settings",
        "//img/private/common:build",
        "//img/private/common:default_deploy_tool",
        "//img/private/common:transitions",
        "//img/private/providers:deploy_info",
        "//img/private/providers:deploy_tool_info",
        "//img/private/providers:index_info",
        "//img/private/providers:load_settings_info",
        "//img/private/providers:manifest_info",
        "//img/private/providers:push_settings_info",
        "//img/private/providers:stamp_setting_info",
        "@bazel_skylib//rules:common_settings",
        "@hermetic_launcher//launcher:lib_bzl",
    ],
)

bzl_library(
    name = "deploy_tool",
    srcs = ["deploy_tool.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = ["//img/private/providers:deploy_tool_info"],
)

bzl_library(
    name = "push_metadata",
    srcs = ["push_metadata.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        ":layer_path_hints",
        ":stamp",
        "//img/private/common:build",
        "//img/private/common:deploy_helpers",
        "//img/private/providers:deploy_info",
        "//img/private/providers:load_config_info",
        "//img/private/providers:push_config_info",
    ],
)

bzl_library(
    name = "push_spec",
    srcs = ["push_spec.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        "//img/private/common:deploy_attrs",
        "//img/private/common:deploy_helpers",
        "//img/private/common:transitions",
        "//img/private/providers:push_config_info",
        "//img/private/providers:push_settings_info",
        "//img/private/providers:stamp_setting_info",
        "@bazel_skylib//rules:common_settings",
    ],
)

bzl_library(
    name = "load_spec",
    srcs = ["load_spec.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        "//img/private/common:deploy_attrs",
        "//img/private/common:deploy_helpers",
        "//img/private/common:transitions",
        "//img/private/providers:load_config_info",
        "//img/private/providers:stamp_setting_info",
        "@bazel_skylib//rules:common_settings",
    ],
)

bzl_library(
    name = "file_for_host",
    srcs = ["file_for_host.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = ["//img/private/common:transitions"],
)

bzl_library(
    name = "empty_layer",
    srcs = ["empty_layer.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = [
        "//img/private/providers:layers_info",
        "//img/private/providers:single_layer_info",
    ],
)

bzl_library(
    name = "sign_settings",
    srcs = ["sign_settings.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = ["@sha256.bzl//:sha256"],
)

bzl_library(
    name = "signing_config",
    srcs = ["signing_config.bzl"],
    visibility = ["//img:__subpackages__"],
    deps = ["//img/private/providers:signing_config_info"],
)

bzl_library(
    name = "annotations_util",
    srcs = ["annotations_util.bzl"],
    visibility = ["//img:__subpackages__"],
)

bzl_library(
    name = "file_metadata",
    srcs = ["file_metadata.bzl"],
    visibility = ["//img:__subpackages__"],
)

bzl_library(
    name = "layer_path_hints",
    srcs = ["layer_path_hints.bzl"],
    visibility = ["//img:__subpackages__"],
)

bzl_library(
    name = "manifest_media_type",
    srcs = ["manifest_media_type.bzl"],
    visibility = ["//img:__subpackages__"],
)

bzl_library(
    name = "root_symlinks",
    srcs = ["root_symlinks.bzl"],
    visibility = ["//img:__subpackages__"],
)
