load("@bazel_skylib//rules:common_settings.bzl", "int_flag", "string_flag")

string_flag(
    name = "compress",
    build_setting_default = "gzip",
    values = [
        "gzip",
        "zstd",
    ],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "estargz",
    build_setting_default = "disabled",
    values = [
        "enabled",
        "disabled",
    ],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "stamp",
    build_setting_default = "auto",
    values = [
        "auto",
        "force",
        "disabled",
    ],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "push_strategy",
    build_setting_default = "eager",
    values = [
        "eager",
        "lazy",
        "cas_registry",
        "bes",
    ],
    visibility = ["//img/private:__subpackages__"],
)

string_flag(
    name = "load_strategy",
    build_setting_default = "eager",
    values = [
        "eager",
        "lazy",
    ],
    visibility = ["//img/private:__subpackages__"],
)

string_flag(
    name = "load_daemon",
    build_setting_default = "docker",
    values = [
        "docker",
        "containerd",
        "podman",
        "containerization",
        "tar",
        "generic",
    ],
    visibility = ["//img/private:__subpackages__"],
)

string_flag(
    name = "remote_cache",
    build_setting_default = "",
    visibility = ["//img/private:__subpackages__"],
)

string_flag(
    name = "remote_instance_name",
    build_setting_default = "",
    visibility = ["//img/private:__subpackages__"],
)

string_flag(
    name = "credential_helper",
    build_setting_default = "",
    visibility = ["//img/private:__subpackages__"],
)

string_flag(
    name = "docker_config_path",
    build_setting_default = "",
    visibility = ["//img/private:__subpackages__"],
)

string_flag(
    name = "shallow_oci_layout",
    build_setting_default = "forbidden",
    values = [
        "forbidden",
        "i_know_what_i_am_doing",
    ],
    visibility = ["//img/private:__subpackages__"],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//img/private/release:__subpackages__"],
)

string_flag(
    name = "compression_jobs",
    build_setting_default = "auto",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "compression_level",
    build_setting_default = "auto",
    values = [
        "auto",
        "fastest",
        "best",
        "-1",
        "0",
        "1",
        "2",
        "3",
        "4",
        "5",
        "6",
        "7",
        "8",
        "9",
    ],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "create_parent_directories",
    build_setting_default = "disabled",
    values = [
        "enabled",
        "disabled",
    ],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "layer_tree_artifact_handling",
    build_setting_default = "full",
    values = [
        "full",
        "deduplicate_symlink",
    ],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "runfiles_shared_path",
    build_setting_default = ".shared_runfiles",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "runfiles_sharing_mode",
    build_setting_default = "auto",
    values = [
        "auto",
        "shared",
        "private",
    ],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "cross_mount",
    build_setting_default = "same_registry",
    values = [
        "same_registry",
        "cross_registry",
        "disabled",
    ],
    visibility = ["//img/private:__subpackages__"],
)

string_flag(
    name = "destination_registry",
    build_setting_default = "",
    visibility = ["//img/private:__subpackages__"],
)

string_flag(
    name = "experimental_compact_layers",
    build_setting_default = "disabled",
    values = [
        "enabled",
        "disabled",
    ],
    visibility = ["//visibility:public"],
)

int_flag(
    name = "experimental_compact_layers_inline_threshold",
    build_setting_default = 4096,
    visibility = ["//visibility:public"],
)

# Path prefix for entries in the layer `mtree` output group. "./" makes every
# entry an unambiguous full-path entry (recommended). "" emits bare tar paths;
# in that mode directory entries are given a trailing "/" so they still contain
# a slash and are not parsed as relative entries.
string_flag(
    name = "mtree_path_prefix",
    build_setting_default = "./",
    values = [
        "./",
        "",
    ],
    visibility = ["//visibility:public"],
)

# Comma-separated list of fields to include in the layer `mtree` output group, in
# order, on a best-effort basis. Supported: type, size, mode, uid, uname, gid,
# gname, sha256, time, link, nlink, xattr.
string_flag(
    name = "mtree_options",
    build_setting_default = "type,size,mode,uid,uname,gid,gname,sha256,time,link,nlink",
    visibility = ["//visibility:public"],
)

# How the layer `mtree` output group is laid out. "tar" emits one entry per tar
# entry in exact tar order (whiteouts kept, no synthesized directories).
# "oci_layer_filesystem_applied_changeset" applies the layer as an OCI changeset
# to an empty filesystem (synthesizing missing parent directories and applying
# whiteouts / opaque whiteouts) and serializes the resulting tree in a stable
# sorted order.
string_flag(
    name = "mtree_layer_layout",
    build_setting_default = "tar",
    values = [
        "tar",
        "oci_layer_filesystem_applied_changeset",
    ],
    visibility = ["//visibility:public"],
)

# How the image `mtree` output group is laid out. An image `mtree` is produced by
# merging the per-layer `mtree` files (in layer order) into one spec.
# "oci_layer_filesystem_applied_changeset" (default) applies the layers as an OCI
# changeset to an empty filesystem -- synthesizing missing parent directories and
# applying whiteouts across layers -- yielding the image's final filesystem view.
# "tar" concatenates the per-layer entries in order, keeping every layer's entries
# (including whiteout markers) verbatim. For the changeset layout to apply
# whiteouts correctly, the per-layer `mtree` files must keep their whiteout markers,
# i.e. mtree_layer_layout should be "tar" (the default).
string_flag(
    name = "mtree_image_layout",
    build_setting_default = "oci_layer_filesystem_applied_changeset",
    values = [
        "tar",
        "oci_layer_filesystem_applied_changeset",
    ],
    visibility = ["//visibility:public"],
)

# Controls how org.opencontainers.image.ref.name is set in the docker save index.json.
# "full_reference" (default) uses the full image reference (e.g. registry.io/repo:tag),
# which is compatible with skopeo and rules_oci.
# "tag_only" uses just the tag (e.g. "tag"), which matches the OCI image spec.
string_flag(
    name = "oci_ref_name",
    build_setting_default = "full_reference",
    values = [
        "full_reference",
        "tag_only",
    ],
    visibility = ["//img/private:__subpackages__"],
)
